--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -77,11 +77,52 @@
 }
 
 @media only screen and (max-width: 800px) {
-  .hero__boxTop {
-    flex-direction: column;
+  .hero__title {
+    font-size: 24px;
   }
+  .hero__text {
+    font-size: 14px;
+  }
+  .hero__btn {
+    font-size: 16px;
+  }
+  .hero__image {
+    width: 280px;
+    height: 280px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .hero__title {
+    font-size: 22px;
+  }
+  .hero__text {
+    font-size: 14px;
+  }
+  .hero__btn {
+    font-size: 15px;
+  }
+  .hero__image {
+    width: 240px;
+    height: 240px;
+  }
+}
+
+@media only screen and (max-width: 540px) {
   .hero__left {
+    margin: 40px auto;
     text-align: center;
-    order: 1;
+  }
+  .hero__title {
+    font-size: 24px;
+  }
+  .hero__text {
+    font-size: 16px;
+  }
+  .hero__btn {
+    font-size: 18px;
+  }
+  .hero__image {
+    display: none;
   }
 }
