--- a/src/components/VoicesCard/VoicesCard.module.scss
+++ b/src/components/VoicesCard/VoicesCard.module.scss
@@ -170,6 +170,7 @@
   }
   .voice__content {
     max-width: 50%;
+    padding: 0;
   }
   .voice__playbox {
     width: 40px;
@@ -187,62 +188,62 @@
   }
 }
 
-@media only screen and (max-width: 500px) {
-  .voice__list,
-  .voice__listWhite {
-    gap: 15px;
-  }
-  .voice__item {
-    max-width: 180px;
-  }
-  .voice__img {
-    height: 220px;
-  }
-  .voice__content {
-    padding: 0;
-  }
-  .voice__playbox {
-    width: 35px;
-    height: 35px;
-    margin-bottom: 15px;
-  }
-  .voice__play > svg {
-    width: 35px;
-    height: 35px;
-  }
-  .voice__firstname,
-  .voice__lastname {
-    max-width: 80%;
-    font-size: 12px;
-  }
-}
+// @media only screen and (max-width: 500px) {
+//   .voice__list,
+//   .voice__listWhite {
+//     gap: 15px;
+//   }
+//   .voice__item {
+//     max-width: 180px;
+//   }
+//   .voice__img {
+//     height: 220px;
+//   }
+//   .voice__content {
+//     padding: 0;
+//   }
+//   .voice__playbox {
+//     width: 35px;
+//     height: 35px;
+//     margin-bottom: 15px;
+//   }
+//   .voice__play > svg {
+//     width: 35px;
+//     height: 35px;
+//   }
+//   .voice__firstname,
+//   .voice__lastname {
+//     max-width: 80%;
+//     font-size: 12px;
+//   }
+// }
 
-@media only screen and (max-width: 415px) {
-  .voice__list,
-  .voice__listWhite {
-    gap: 10px;
-  }
-  .voice__item {
-    max-width: 150px;
-  }
-  .voice__img {
-    height: 200px;
-  }
-  .voice__content {
-    padding: 0;
-  }
-  .voice__playbox {
-    width: 30px;
-    height: 30px;
-    margin-bottom: 10px;
-  }
-  .voice__play > svg {
-    width: 30px;
-    height: 30px;
-  }
-  .voice__firstname,
-  .voice__lastname {
-    max-width: 80%;
-    font-size: 10px;
-  }
-}
+// @media only screen and (max-width: 415px) {
+//   .voice__list,
+//   .voice__listWhite {
+//     gap: 10px;
+//   }
+//   .voice__item {
+//     max-width: 150px;
+//   }
+//   .voice__img {
+//     height: 200px;
+//   }
+//   .voice__content {
+//     padding: 0;
+//   }
+//   .voice__playbox {
+//     width: 30px;
+//     height: 30px;
+//     margin-bottom: 10px;
+//   }
+//   .voice__play > svg {
+//     width: 30px;
+//     height: 30px;
+//   }
+//   .voice__firstname,
+//   .voice__lastname {
+//     max-width: 80%;
+//     font-size: 10px;
+//   }
+// }
