Edit Header styles

--- a/src/components/Header/Search.module.scss
+++ b/src/components/Header/Search.module.scss
@@ -14,55 +14,51 @@
 }
 
 .search {
-  background-color: white;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  background-color: #ccc5b9;
+  box-shadow: #21252970 0px 8px 24px 0px;
   .title {
-    color: #474747;
+    color: #403d39;
   }
 
   .link {
-    border-bottom: 1.5px solid #474747;
+    border-bottom: 1.5px solid #403d39;
   }
 
   .firstname {
-    color: #474747;
+    color: #403d39;
   }
 
   .lastname {
-    color: #474747;
+    color: #403d39;
   }
 
   .icons {
-    color: #282828;
+    color: #403d39;
   }
 }
 
 .searchDark {
-  background-color: #282828;
-  box-shadow: rgba(88, 88, 162, 0.25) 0px 50px 100px -20px,
-    rgba(81, 81, 81, 0.3) 0px 30px 60px -30px,
-    rgba(18, 66, 114, 0.35) 0px -2px 6px 0px inset;
+  background-color: #343a40;
+  box-shadow: #21252970 0px 8px 24px 0px;
 
   .title {
-    color: #cdcdcd;
+    color: #ced4da;
   }
 
   .link {
-    border-bottom: 1.5px solid #fff;
+    border-bottom: 1.5px solid #ced4da;
   }
 
   .firstname {
-    color: #b6b6b6;
+    color: #ced4da;
   }
 
   .lastname {
-    color: #b6b6b6;
+    color: #ced4da;
   }
 
   .icons {
-    color: #b6b6b6;
+    color: #ced4da;
   }
 }
 
@@ -120,44 +116,44 @@
 }
 
 .search__mobileDark {
-  background: #0f0f0f;
+  background: #212529;
   box-shadow: rgba(101, 101, 101, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
   .header__searchIcon {
-    color: #666666;
+    color: #ced4da;
   }
 
   .header__search {
-    color: #b6b6b6;
-    background: #3d3d3d;
+    color: #ced4da;
+    background: #343a40;
 
     &::placeholder {
-      color: #666;
+      color: #ced4da;
     }
   }
   .arrowLeft {
-    color: #cdcdcd;
+    color: #ced4da;
   }
 }
 
 .search__mobile {
-  background: #fff;
+  background: #fffcf2;
   box-shadow: rgba(44, 62, 80, 0.577) 0px 15px 15px -15px;
 
   .header__searchIcon {
-    color: #3f3f3f;
+    color: #403d39;
   }
   .header__search {
-    color: #3f3f3f;
-    background: #d9d9d9;
+    color: #403d39;
+    background: #ccc5b9;
 
     &::placeholder {
-      color: #3f3f3f;
+      color: #403d39;
     }
   }
   .arrowLeft {
-    color: #282828;
+    color: #403d39;
   }
 }
 
@@ -231,7 +227,6 @@
   left: -50px;
   width: 24px;
   height: 25px;
-  color: #cdcdcd;
   transition: all 0.2s ease;
 }
 
