--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,15 +1,14 @@
 .header {
   position: relative;
-  background-color: #0f0f0f;
   box-shadow: rgba(101, 101, 101, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
   .link__line {
-    background: #666;
+    background: #ced4da;
   }
 
   .header__link {
-    color: #b6b6b6;
+    color: #ced4da;
     &:nth-child(1):hover {
       color: #eaeaea;
       .link__line {
@@ -26,54 +25,28 @@
     }
   }
   .header__searchIcon {
-    color: #666666;
+    color: #ced4da;
   }
 
   .header__search {
-    color: #b6b6b6;
-    background: #3d3d3d;
+    color: #ced4da;
+    background: #343a40;
 
     &::placeholder {
-      color: #666;
-    }
-  }
-
-  .select {
-    background: #3d3d3d;
-    &::after {
-      color: #666;
-    }
-    &:hover::after {
-      color: yellow;
-    }
-    & > select {
-      color: #b6b6b6;
+      color: #ced4da;
     }
   }
 
   .header__tel,
-  .header__insta {
-    color: #666666;
-    background-color: #3d3d3d;
-
-    &:hover {
-      color: #202020;
-      background: radial-gradient(50% 50% at 50% 50%, #7a7a7a 0%, #3d3d3d 100%);
-    }
-  }
-
-  .label {
-    background-color: #111;
-    border: 1px solid #666;
-  }
-  .ball {
-    background-color: #666;
+  .header__insta,
+  .dark__light {
+    color: #ced4da;
+    background-color: #343a40;
   }
 }
 
 .headerWhite {
   position: relative;
-  background-color: #fff;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
@@ -82,9 +55,9 @@
   }
 
   .header__link {
-    color: #3f3f3f;
+    color: #403d39;
     &:nth-child(1):hover {
-      color: #232323;
+      color: #403d39;
       .link__line {
         width: 100%;
         background: #232323;
@@ -99,47 +72,22 @@
     }
   }
   .header__searchIcon {
-    color: #3f3f3f;
+    color: #403d39;
   }
   .header__search {
-    color: #3f3f3f;
-    background: #d9d9d9;
+    color: #403d39;
+    background: #ccc5b9;
 
     &::placeholder {
-      color: #3f3f3f;
-    }
-  }
-
-  .select {
-    background: #d9d9d9;
-    &::after {
-      color: #0f0f0f;
-    }
-    &:hover::after {
-      color: yellow;
-    }
-    & > select {
-      color: #0f0f0f;
+      color: #403d39;
     }
   }
 
   .header__tel,
-  .header__insta {
-    color: #3f3f3f;
-    background-color: #d9d9d9;
-
-    &:hover {
-      color: #232323;
-      background: radial-gradient(50% 50% at 50% 50%, #d9d9d9 0%, #b1b1b1 100%);
-    }
-  }
-
-  .label {
-    background-color: #d9d9d9;
-    border: 1px solid #3f3f3f;
-  }
-  .ball {
-    background-color: #3f3f3f;
+  .header__insta,
+  .light__dark {
+    color: #403d39;
+    background-color: #ccc5b9;
   }
 }
 
@@ -247,52 +195,6 @@
   }
 }
 
-select {
-  appearance: none;
-  border: 0;
-  outline: 0;
-  background: none;
-  color: inherit;
-  box-shadow: none;
-}
-select::-ms-expand {
-  display: none;
-}
-
-.select {
-  position: relative;
-  display: flex;
-  border-radius: 0.25rem;
-  overflow: hidden;
-
-  select {
-    flex: 1;
-    padding: 8px 12px;
-    padding-right: 28px;
-    cursor: pointer;
-  }
-
-  &::after {
-    content: "\25BC";
-    position: absolute;
-    right: 7px;
-    top: 9px;
-    transition: 0.25s all ease;
-    pointer-events: none;
-  }
-  &:hover::after {
-    animation: bounce 0.5s infinite;
-  }
-}
-@keyframes bounce {
-  25% {
-    transform: translatey(5px);
-  }
-  75% {
-    transform: translatey(-5px);
-  }
-}
-
 .header__tel,
 .header__insta {
   display: block;
@@ -306,46 +208,41 @@ select::-ms-expand {
   padding: 7.57px;
 }
 
-.checkbox {
-  opacity: 0;
-  position: absolute;
-}
-
-.label {
-  width: 50px;
-  height: 26px;
-  display: flex;
-  border-radius: 50px;
-  align-items: center;
-  justify-content: space-between;
-  padding: 5px;
-  position: relative;
-  transform: scale(1.5);
-}
-
-.ball {
-  width: 20px;
-  height: 20px;
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  border-radius: 50%;
-  transition: transform 0.2s linear;
-}
-
-.checkbox:checked + .label .ball {
-  transform: translateX(24px);
-}
-
 .mobile {
   position: relative;
   display: none;
 }
 
-.moon,
-.sun {
-  width: 16px;
-  height: 16px;
+.lang {
+  cursor: pointer;
+}
+
+.text {
+  padding: 7px 1rem;
+  font-size: 16px;
+  border-radius: 0.375rem;
+}
+
+.lightToggle {
+  color: #403d39;
+  background-color: #ccc5b9;
+}
+
+.darkToggle {
+  color: #adb5bd;
+  background-color: #343a40;
+}
+
+.theme__toggle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 11px;
+  transition: all 0.2s ease;
 }
 
 @media only screen and (max-width: 800px) {
@@ -371,14 +268,10 @@ select::-ms-expand {
   .header__item {
     width: 100%;
     margin-bottom: 30px;
-
-    &:nth-child(3) {
-      .checkBoxTheme {
-        margin-right: 10px;
+    &:last-child {
+      .header__linkList {
+        margin-left: auto;
       }
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
     }
   }
 }
