--- a/src/components/Error/Error.module.scss
+++ b/src/components/Error/Error.module.scss
@@ -5,18 +5,17 @@
   justify-content: center;
   height: 100%;
   margin: 0 auto;
-  background-color: #0f0f0f;
 
   .title {
-    color: #b8b8b8;
+    color: #ced4da;
   }
   .message,
   .statusText {
-    color: #8b8b8b;
+    color: #ced4da;
   }
   .link {
-    color: #fff;
-    background: #407bff;
+    color: #ced4da;
+    background: #343a40;
   }
 }
 
@@ -27,18 +26,17 @@
   justify-content: center;
   height: 100%;
   margin: 0 auto;
-  background-color: #fff;
 
   .title {
-    color: #b8b8b8;
+    color: #403d39;
   }
   .message,
   .statusText {
-    color: #8b8b8b;
+    color: #403d39;
   }
   .link {
-    color: #fff;
-    background: #407bff;
+    color: #eae0d5;
+    background: #5e503f;
   }
 }
 
