--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -2,15 +2,15 @@
   padding: 80px 0;
 
   .hero__title {
-    color: #b8b8b8;
+    color: #ced4da;
   }
 
   .hero__text {
-    color: #666;
+    color: #ced4da;
   }
 
   .hero__btn {
-    color: #666;
+    color: #ced4da;
   }
 }
 
@@ -18,15 +18,15 @@
   padding: 80px 0;
 
   .hero__title {
-    color: #2f2f2f;
+    color: #403d39;
   }
 
   .hero__text {
-    color: rgba(63, 63, 63, 0.75);
+    color: #403d39;
   }
 
   .hero__btn {
-    color: rgba(63, 63, 63, 0.75);
+    color: #403d39;
   }
 }
 
