--- a/src/components/VoicesCard/VoicesCard.module.scss
+++ b/src/components/VoicesCard/VoicesCard.module.scss
@@ -11,13 +11,13 @@
   .voice__firstname,
   .voice__lastname,
   .voice__more {
-    color: #b6b6b6;
+    color: #403d39;
   }
   .voice__item {
-    background-color: #3d3d3d;
+    background-color: #eae0d5;
   }
   .voice__play {
-    color: #b6b6b6;
+    color: #403d39;
   }
 }
 
@@ -34,14 +34,13 @@
   .voice__firstname,
   .voice__lastname,
   .voice__more {
-    color: #3f3f3f;
+    color: #ced4da;
   }
   .voice__item {
-    border: 1px solid #3f3f3f;
-    background-color: #d9d9d9;
+    background-color: #343a40;
   }
   .voice__play {
-    color: #3f3f3f;
+    color: #ced4da;
   }
 }
 
