--- a/src/components/Category/Category.module.scss
+++ b/src/components/Category/Category.module.scss
@@ -2,7 +2,6 @@
   padding: 80px 0;
 
   .category__firstName,
-  .category__lastName,
   .category__description {
     color: #403d39;
   }
@@ -18,8 +17,7 @@
 .category__sectionDark {
   padding: 80px 0;
 
-  .category__firstName,
-  .category__lastName {
+  .category__firstName {
     color: #ced4da;
   }
   .category__description {
@@ -70,26 +68,17 @@
   margin-bottom: 12px;
 }
 
-.category__nmB {
-  display: flex;
-  align-items: center;
-  gap: 15px;
+.category__firstName {
+  margin: 0;
+  font-size: 30px;
+  font-style: normal;
+  line-height: normal;
+  text-transform: uppercase;
   width: 100%;
   max-width: 480px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-
-.category__firstName,
-.category__lastName {
-  margin: 0;
-  text-align: right;
-  font-size: 32px;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: 1.617px;
-  text-transform: uppercase;
 }
 
 .category__linkList {
@@ -160,13 +149,15 @@
 }
 
 @media only screen and (max-width: 1115px) {
-  .category__firstName,
-  .category__lastName {
+  .category__firstName {
     font-size: 24px;
   }
 }
 
 @media only screen and (max-width: 1000px) {
+  .category__firstName {
+    font-size: 22px;
+  }
   .category__insta,
   .category__similar,
   .category__share {
@@ -213,15 +204,13 @@
 }
 
 @media only screen and (max-width: 777px) {
+  .category__firstName {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
   .category__image {
     width: 250px;
-  }
-}
-
-@media only screen and (max-width: 690px) {
-  .category__nmB {
-    flex-direction: column;
-    align-items: flex-start;
   }
 }
 
@@ -232,177 +221,20 @@
   .category__image {
     width: 350px;
   }
-  .category__nmB {
+  .category__firstName {
     flex-direction: row;
-    align-items: center;
   }
   .category__content {
     height: auto;
   }
 }
 
-.wavefrom__item {
-  width: 100%;
-  max-width: 100%;
-  display: flex;
-  align-items: center;
-  margin-bottom: 40px;
-  padding: 32px 60px;
-  border-radius: 44px;
-  background: #fff;
-  box-shadow: 0px 0px 40.3px 0px rgba(0, 0, 0, 0.25);
-
-  .wavefrom__title {
-    color: #3f3f3f;
+@media only screen and (max-width: 400px) {
+  .category__image {
+    width: 280px;
   }
-  .wavefrom__desc {
-    color: #3f3f3f;
-  }
-  .wavefrom__minutSecond {
-    color: #3f3f3f;
-  }
-  .wavefrom__btn {
-    color: #3f3f3f;
-  }
-}
-
-.wavefrom__itemDark {
-  width: 100%;
-  max-width: 100%;
-  display: flex;
-  align-items: center;
-  margin-bottom: 40px;
-  padding: 32px 60px;
-  border-radius: 44px;
-  background: #0f0f0f;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px 0px;
-
-  .wavefrom__title {
-    color: #b8b8b8;
-  }
-  .wavefrom__desc {
-    color: #666;
-  }
-  .wavefrom__minutSecond {
-    color: #b8b8b8;
-  }
-  .wavefrom__btn {
-    color: #b8b8b8;
-  }
-}
-
-.wavefrom__audioBox {
-  width: 100%;
-}
-
-.wavefrom__controller {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.wavefrom__textContent {
-  width: 100%;
-  max-width: 900px;
-}
-
-.wavefrom__title {
-  margin-top: 0;
-  margin-bottom: 6px;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 1px;
-}
-
-.wavefrom__desc {
-  margin: 0;
-  font-size: 18px;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: 1px;
-}
-
-.wavefrom__minutSecond {
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: 1px;
-
-  & > span {
-    display: block;
-  }
-}
-
-.wavefrom__box {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-  width: 100%;
-  background: transparent;
-}
-
-.wavefrom__btn {
-  width: 80px;
-  height: 80px;
-  cursor: pointer;
-}
-
-.wavefrom__wave {
-  width: 100%;
-}
-
-@media only screen and (max-width: 1362px) {
-  .wavefrom__textContent {
-    max-width: 600px;
-  }
-}
-
-@media only screen and (max-width: 1062px) {
-  .wavefrom__textContent {
-    max-width: 450px;
-  }
-}
-
-@media only screen and (max-width: 907px) {
-  .wavefrom__item,
-  .wavefrom__itemDark {
-    padding: 26px 30px;
-  }
-  .wavefrom__title {
-    font-size: 24px;
-  }
-  .wavefrom__desc {
-    font-size: 16px;
-  }
-  .wavefrom__textContent {
-    max-width: 450px;
-  }
-}
-
-@media only screen and (max-width: 848px) {
-  .wavefrom__item,
-  .wavefrom__itemDark {
-    padding: 24px 35px;
-  }
-  .wavefrom__title {
-    font-size: 18px;
-  }
-  .wavefrom__desc {
-    font-size: 14px;
-  }
-  .wavefrom__minutSecond {
-    font-size: 16px;
-  }
-  .wavefrom__btn,
-  .wavefrom__btn > svg {
-    width: 60px;
-    height: 60px;
+  .category__firstName {
+    display: flex;
+    flex-direction: column;
   }
 }
