--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,55 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Jeko";
-  src: url("./fonts/Jeko-Black.woff2") format("woff2"),
-    url("./fonts/Jeko-Black.woff") format("woff");
-  font-weight: 400;
+  font-family: "Readex Pro";
+  src: url("./fonts/ReadexPro-ExtraLight.woff2") format("woff2"),
+    url("./fonts/ReadexPro-ExtraLight.woff") format("woff");
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Readex Pro";
+  src: url("./fonts/ReadexPro-SemiBold.woff2") format("woff2"),
+    url("./fonts/ReadexPro-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Readex Pro";
+  src: url("./fonts/ReadexPro-Bold.woff2") format("woff2"),
+    url("./fonts/ReadexPro-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Readex Pro";
+  src: url("./fonts/ReadexPro-Medium.woff2") format("woff2"),
+    url("./fonts/ReadexPro-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Readex Pro";
+  src: url("./fonts/ReadexPro-Regular.woff2") format("woff2"),
+    url("./fonts/ReadexPro-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Readex Pro";
+  src: url("./fonts/ReadexPro-Light.woff2") format("woff2"),
+    url("./fonts/ReadexPro-Light.woff") format("woff");
+  font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
@@ -28,7 +73,7 @@ body {
   flex-direction: column;
   height: 100%;
   margin: 0;
-  font-family: "Jeko", "Arial", sans-serif;
+  font-family: "Readex Pro", "Arial", sans-serif;
   font-weight: 400;
   background-color: #212529;
 }
